21-GKE-Gateway-API/08-GKE-Gateway-API-Traffic-Splitting/p2-regional-k8sresources-yaml/c1-01-myapp1-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: #Dictionary
  name: myapp1-deployment-v1
spec: # Dictionary
  replicas: 2
  selector:
    matchLabels:
      app: myapp1-v1
  template:  
    metadata: # Dictionary
      name: myapp1-pod-v1
      labels: # Dictionary
        app: myapp1-v1  # Key value pairs
    spec:
      containers: # List
        - name: myapp1-container-v1
          image: ghcr.io/stacksimplify/kubenginx:1.0.0
          ports: 
            - containerPort: 80  
          resources:
            requests:
              memory: "256Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
              cpu: "250m" # `m` means milliCPU
            limits:
              memory: "512Mi"
              cpu: "400m"  # 1000m is equal to 1 VCPU core
