21-GKE-Gateway-API/08-GKE-Gateway-API-Traffic-Splitting/p2-regional-k8sresources-yaml/c1-02-myapp1-v1-clusterip-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: myapp1-service-v1
spec:
  type: ClusterIP # ClusterIP, # NodePort # LoadBalancer
  selector:
    app: myapp1-v1
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
